# rust_search_engine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  api.http  docker-compose.yml
api/: Cargo.toml
api/src/: main.rs
application/: Cargo.toml
application/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/persistence/: in_memory_repository.rs  mod.rs
infrastructure/src/search/: in_memory_index.rs  mod.rs
