[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
# Depends on the domain crate
domain = { path = "../domain" }

# For defining interfaces (traits) with async methods
async-trait = "0.1"

# Logging facade (used by application logic)
tracing = "0.1"

# Error handling (good practice to add early)
thiserror = "1.0"
# anyhow = "1.0" # Alternatively, for more general error handling

# Serialization (often needed for request/response structures)
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }                                      # If DTOs use Value
